--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -120,7 +120,7 @@
             <a href="/about" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
               <i class="fas fa-info-circle mr-2"></i> About
             </a>
-            <a href="<%= process.env.STATUS_APP_URL || 'http://localhost:3001' %>" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
+            <a href="/status" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
               <i class="fas fa-heartbeat mr-2"></i> System Status
             </a>
             <a href="/tech-ads" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
@@ -253,7 +253,7 @@
             <a href="/about" class="block py-2 text-gray-300 hover:text-white">
               <i class="fas fa-info-circle mr-2"></i> About
             </a>
-            <a href="<%= process.env.STATUS_APP_URL || 'http://localhost:3001' %>" class="block py-2 text-gray-300 hover:text-white">
+            <a href="/status" class="block py-2 text-gray-300 hover:text-white">
               <i class="fas fa-heartbeat mr-2"></i> System Status
             </a>
             <a href="/tech-ads" class="block py-2 text-gray-300 hover:text-white">
