--- a/views/status/index.ejs
+++ b/views/status/index.ejs
@@ -21,8 +21,8 @@
           </div>
 
           <div class="flex space-x-3">
-            <a href="<%= process.env.STATUS_APP_URL || 'http://localhost:3001' %>" class="px-4 py-2 bg-neon-blue text-white rounded-md hover:bg-blue-600 transition-colors">
-              <i class="fas fa-external-link-alt mr-2"></i> Full Status Page
+            <a href="/status" class="px-4 py-2 bg-neon-blue text-white rounded-md hover:bg-blue-600 transition-colors">
+              <i class="fas fa-sync-alt mr-2"></i> Refresh Status
             </a>
             <a href="#subscribe" class="px-4 py-2 bg-dark-100 text-white rounded-md hover:bg-dark-300 transition-colors">
               <i class="fas fa-bell mr-2"></i> Subscribe to Updates
