--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -156,6 +156,9 @@
               <a href="/rate-limits/request" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
                 <i class="fas fa-tachometer-alt mr-2"></i> Request Rate Limit
               </a>
+              <a href="/api/developer-portal" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
+                <i class="fas fa-code mr-2"></i> Developer Portal
+              </a>
               <a href="/issues/report" class="block px-4 py-2 text-sm text-gray-300 hover:bg-dark-200 hover:text-white">
                 <i class="fas fa-ticket-alt mr-2"></i> Report an Issue
               </a>
@@ -284,6 +287,9 @@
             </a>
             <a href="/rate-limits/request" class="block py-2 text-gray-300 hover:text-white">
               <i class="fas fa-tachometer-alt mr-2"></i> Request Rate Limit
+            </a>
+            <a href="/api/developer-portal" class="block py-2 text-gray-300 hover:text-white">
+              <i class="fas fa-code mr-2"></i> Developer Portal
             </a>
             <a href="/issues/report" class="block py-2 text-gray-300 hover:text-white">
               <i class="fas fa-ticket-alt mr-2"></i> Report an Issue
